force-app/main/default/objects/Discount_Log__c/Discount_Log__c.object-meta.xml
<CustomObject>
    <label>Discount Log</label>
    <nameField>
        <displayFormat>DL-{00000}</displayFormat>
        <label>Discount Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Discount Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>